# FaceRecognize

./: .gitignore  README.md  base.py  camera_tracker.py  face_alignment.py  face_clustering.py  face_detector.py  face_features.py  face_landmarks.py  face_recognition.py  face_recognize_in_vedio.py  settings.py  utils.py  vedio_base.py
AIMakeup/: AIMakeup.py
cpp_src/: CMakeLists.txt  face_detector.cpp  mybase.hpp  video_tracker.cpp  vidio.cpp
script/: download_baidu_img.py  download_star_img.py  reform_star_data.py  reform_start_data.py  rename_img_in_dir.py
